--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -170,6 +170,10 @@
                                     <div class="col-sm-2">$T('category')</div>
                                     <div class="col-sm-10" data-bind="text: historyStatus.category() == '*' ? glitterTranslate.defaultText : historyStatus.category"></div>
                                 </div>
+                                <div class="row" data-bind="visible: historyStatus.password">
+                                    <div class="col-sm-2">$T('srv-password')</div>
+                                    <div class="col-sm-10" data-bind="text: historyStatus.password"></div>
+                                </div>
                                 <div class="row">
                                     <div class="col-sm-2">$T('msg-path')</div>
                                     <div class="col-sm-10" data-bind="text: historyStatus.storage() == '' ? historyStatus.path : historyStatus.storage"></div>
