Only report missing UnZip when missing 7Zip

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -81,7 +81,7 @@
                     </td>
                 </tr>
                 <!--#end if#-->
-                <!--#if not $have_unzip #-->
+                <!--#if not $have_unzip and not $have_7zip #-->
                 <tr>
                     <th scope="row">$T('opt-enable_unzip'):</th>
                     <td>
