Add new %dn to Pattern Key for Date Sorting
Closes #1080

--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -408,6 +408,11 @@
                                     <td>$T('sort-File')</td>
                                 </tr>
                                 <tr>
+                                    <td class="align-right"><b>$T('orgDirname'):</b></td>
+                                    <td>%dn</td>
+                                    <td>$T("sort-Folder")</td>
+                                </tr>
+                                <tr>
                                     <td class="align-right"><b>$T('lowercase'):</b></td>
                                     <td>{$T('TEXT')}</td>
                                     <td>$T('text')</td>
