--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -3,6 +3,11 @@
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="colmask">
+    <div class="padding alt section">
+        <label for="advanced-settings-button" class="form-control advanced-button ">
+            <input type="checkbox" id="advanced-settings-button" name="advanced-settings-button"> $T('button-advanced')
+        </label>
+    </div>
     <form action="saveGeneral" method="post" name="fullform" class="fullform" autocomplete="off">
     <input type="hidden" id="session" name="session" value="$session" />
     <input type="hidden" id="ajax" name="ajax" value=1 />
@@ -28,7 +33,7 @@
                     <input type="checkbox" name="enable_https" id="enable_https" value="1" <!--#if int($enable_https) > 0 then 'checked="checked" data-original="1"' else ""#-->/>
                     <span class="desc">$T('explain-enable_https')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="web_dir">$T('opt-web_dir')</label>
                     <select name="web_dir" id="web_dir">
                     <!--#for $webline in $web_list#-->
@@ -89,7 +94,6 @@
                 <div class="field-pair">
                     <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
                     <button class="btn btn-default sabnzbd_restart"><span class="glyphicon glyphicon-refresh"></span> $T('button-restart') SABnzbd</button>
-                    <button class="btn btn-default advancedButton enable_https_options"><span class="glyphicon glyphicon-cog"></span> $T('button-advanced')</button>
                 </div>
             </fieldset>
         </div>
@@ -173,7 +177,7 @@
                     </select>
                     <span class="desc">$T('explain-check_new_rel')</span>
                 </div>
-                <div class="field-pair <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
+                <div class="field-pair advanced-settings <!--#if int($have_ssl_context) == 0 then "disabled" else ""#-->">
                     <label class="config" for="enable_https_verification">$T('opt-enable_https_verification')</label>
                     <input type="checkbox" name="enable_https_verification" id="enable_https_verification" value="1" <!--#if int($enable_https_verification) > 0 then 'checked="checked"' else ""#--> <!--#if int($have_ssl_context) == 0 then "disabled=\"disabled\"" else ""#--> />
                     <span class="desc">$T('explain-enable_https_verification')</span>
@@ -200,12 +204,12 @@
                     </select>
                     <input type="hidden" name="bandwidth_max" id="bandwidth_max" value="$bandwidth_max" />
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="bandwidth_perc">$T('opt-bandwidth_perc')</label>
                     <input type="number" name="bandwidth_perc" id="bandwidth_perc" value="$bandwidth_perc" step="10" min="0" max="100"/>
                     <span class="desc">$T('explain-bandwidth_perc')</span>
                 </div>
-                <div class="field-pair">
+                <div class="field-pair advanced-settings">
                     <label class="config" for="cache_limit">$T('opt-cache_limitstr')</label>
                     <input type="text" name="cache_limit" id="cache_limit" value="$cache_limit" class="smaller_input" />
                     <span class="desc">$T('explain-cache_limitstr').replace("64M", "256M").replace("128M", "512M")</span>
