--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -53,7 +53,7 @@
                             <label class="config">$T('sortResult')</label> <span class="desc path" id="previewtv-result">&nbsp;</span>
                         </div>
                     </div>
-                    <div class="field-pair">
+                    <div class="field-pair no-field-pair-bg">
                         <label class="config">$T('sort-legenda')</label>
                         <button type="button" class="btn btn-default patternKey" onclick="jQuery(this).hide(); jQuery('#Key1').show();"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> $T('sort-legenda')</button>
                         <table id="Key1" class="Key">
@@ -213,7 +213,7 @@
                             <label class="config">$T('sortResult')</label> <span class="desc path" id="previewmovie-result">&nbsp;</span>
                         </div>
                     </div>
-                    <div class="field-pair">
+                    <div class="field-pair no-field-pair-bg">
                         <label class="config">$T('sort-legenda')</label>
                         <button type="button" class="btn btn-default patternKey" onclick="jQuery(this).hide(); jQuery('#Key2').show();"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> $T('sort-legenda')</button>
                         <table id="Key2" class="Key">
@@ -345,7 +345,7 @@
                             <label class="config">$T('sortResult')</label> <span class="desc path" id="previewdate-result">&nbsp;</span>
                         </div>
                     </div>
-                    <div class="field-pair">
+                    <div class="field-pair no-field-pair-bg">
                         <label class="config">$T('sort-legenda')</label>
                         <button type="button" class="btn btn-default patternKey" onclick="jQuery(this).hide(); jQuery('#Key3').show();"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> $T('sort-legenda')</button>
                         <table id="Key3" class="Key">
