Show JSON-returned errors also to user in Config

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -76,6 +76,7 @@
         <div class="col1">
             <form action="addServer" method="post" autocomplete="off" onsubmit="removeObfuscation();">
                 <input type="hidden" name="session" value="$session" />
+                <input type="hidden" id="ajax" name="ajax" value=1 />
                 <fieldset>
                     <div class="field-pair">
                         <label class="config" for="enable">$T('srv-enable')</label>
@@ -166,6 +167,7 @@
         <form action="saveServer" method="post" class="fullform" autocomplete="off">
             <input type="hidden" name="session" value="$session" />
             <input type="hidden" name="server" value="$server['name']" />
+            <input type="hidden" id="ajax" name="ajax" value=1 />
 
             <div class="section <!--#if int($server['enable']) == 0 then 'server-disabled' else ""#-->">
                 <div class="col2 <!--#if int($server['enable']) == 0 then 'server-disabled' else ""#-->">
@@ -465,6 +467,7 @@
             setTimeout(function() { portBox.removeClass('port-highlight') }, 2000)
         })
 
+        // Testing servers
         \$('.testServer').click(function(event){
             removeObfuscation()
             var theButton = \$(this)
