--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -130,6 +130,12 @@
                         <span class="desc">$T('explain-ssl_verify').replace('. ', '.<br/>')</span>
                     </div>
                     <div class="field-pair advanced-settings">
+                        <label class="config" for="ssl_ciphers">$T('opt-ssl_ciphers')</label>
+                        <input type="text" name="ssl_ciphers" id="ssl_ciphers" />
+                        <span class="desc">$T('explain-ssl_ciphers') <br>$T('readwiki')
+                        <a href="${helpuri}advanced/ssl-ciphers" target="_blank">${helpuri}advanced/ssl-ciphers</a></span>
+                    </div>
+                    <div class="field-pair advanced-settings">
                         <label class="config" for="send_group">$T('srv-send_group')</label>
                         <input type="checkbox" name="send_group" id="send_group" value="1" />
                         <span class="desc">$T('srv-explain-send_group')</span>
@@ -238,6 +244,12 @@
                                 <option value="0" <!--#if $server['ssl_verify'] == 0 then 'selected="selected"' else ""#--> >$T('ssl_verify-disabled')</option>
                             </select>
                             <span class="desc">$T('explain-ssl_verify').replace('. ', '.<br/>')</span>
+                        </div>
+                        <div class="field-pair advanced-settings">
+                            <label class="config" for="ssl_ciphers">$T('opt-ssl_ciphers')</label>
+                            <input type="text" name="ssl_ciphers" id="ssl_ciphers" value="$server['ssl_ciphers']" />
+                            <span class="desc">$T('explain-ssl_ciphers') <br>$T('readwiki')
+                            <a href="${helpuri}advanced/ssl-ciphers" target="_blank">${helpuri}advanced/ssl-ciphers</a></span>
                         </div>
                         <div class="field-pair advanced-settings">
                             <label class="config" for="optional$cur">$T('srv-optional')</label>
